force-app/main/default/objects/Scenario__c/Scenario__c.object-meta.xml
<CustomObject>
    <description>Used to model the differences between documents under different scenarios such as region, loan type or legal professional.</description>
    <label>Scenario</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>