force-app/main/default/objects/Scenario__c/fields/DocumentTemplate__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Scenarios (Document Template)</relationshipLabel>
    <relationshipName>DocumentScenarios</relationshipName>
    <type>Lookup</type>
</CustomField>