force-app/main/default/objects/Scenario__c/fields/LoanType__c.field-meta.xml
<CustomField>
    <fullName>LoanType__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facility Loan</fullName>
            </value>
            <value>
                <fullName>Lump-Sum</fullName>
            </value>
            <value>
                <fullName>Treatment Loan</fullName>
            </value>
            <value>
                <fullName>Treatment Loan 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>