force-app/main/default/objects/Scenario__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Scenario_Region__c</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>