force-app/main/default/objects/Scenario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>LoanType__c</columns>
    <columns>Region__c</columns>
    <columns>DocumentTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>